@@ -1,0 +1,30 @@
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace Omegasis.Revitalize.Framework.Configs.ShopConfigs
+{
+    public class WalnutRoomShopConfig
+    {
+        //Blueprints
+        public int NuclearFurnaceBlueprintQiGemPrice = 20;
+        public int MagicalFurnaceBlueprintQigemPrice = 40;
+
+
+        //Resource bushes.
+        public int CoalResourceBushQiGemPrice = 5;
+        public int CopperOreResourceBushQiGemPrice = 5;
+        public int IronOreResourceBushQiGemPrice = 10;
+        public int GoldOreResourceBushQiGemPrice = 15;
+        public int IridiumOreResoureceBushQiGemPrice = 20;
+        public int RadioactiveOreResoureceBushQiGemPrice = 25;
+
+        public WalnutRoomShopConfig()
+        {
+
+        }
+
+    }
+}
