@@ -3,6 +3,11 @@ Key:
 ~ Changed Content/Feature or Bugfix.
 - Removed Content/Feature.
 
+~~~~~~~~~~~~0.0.1 Revitalize 10-18-2022 xx.xx P.M~~~~~~~~~~~~~~
+~Cleaned up some code in DwarfShopUtilities to make it more clear on how resource bushes are sold.
++Added Coal, Copper, Iron, Gold, Iridium, and Radioactive resource bushes to Qi's Walnut room.
++Added config file for Qi's Walnut room sell prices including for existing nuclear and magical furnace blueprints.
+
 ~~~~~~~~~~~~0.0.1 Revitalize 10-17-2022 xx.xx P.M~~~~~~~~~~~~~~
 ~ Slightly reduced the default chance of resource bushes being sold by the Dwarf.
 + Added the ability for resource bush chances being sold by the Dwarf to a config file.
